<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.mine.MineFragment">

    <ImageView
        android:id="@+id/ivMore"
        android:layout_width="@dimen/actionBarSize"
        android:layout_height="@dimen/actionBarSize"
        android:layout_gravity="end"
        android:padding="14dp"
        android:src="@drawable/ic_more_black_19dp" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivAvatar"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/ic_logo_black_76dp"
        app:civ_border_color="#cdcdcd"
        app:civ_border_width="1dp"
        app:civ_circle_background_color="@color/gray" />

    <com.eyepetizer.android.ui.common.view.TypefaceTextView
        android:id="@+id/tvLoginTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:text="@string/guide_login_tips"
        android:textSize="12sp"
        app:typeface="fzlLTypeface" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/viewVerticalLine"
            android:layout_width="1px"
            android:layout_height="26dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="32dp"
            android:background="@color/grayDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.eyepetizer.android.ui.common.view.TypefaceTextView
            android:id="@+id/tvFavorites"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_favorite_border_black_20dp"
            android:drawablePadding="8dp"
            android:gravity="center"
            android:text="@string/favorites"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewVerticalLine"
            app:layout_constraintEnd_toStartOf="@+id/viewVerticalLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/viewVerticalLine"
            app:typeface="fzlLTypeface" />

        <com.eyepetizer.android.ui.common.view.TypefaceTextView
            android:id="@+id/tvCache"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_cache_black_16dp"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            android:text="@string/cache"
            android:textColor="@color/colorTextSecondary"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/viewVerticalLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/viewVerticalLine"
            app:layout_constraintTop_toTopOf="@+id/viewVerticalLine"
            app:typeface="fzlLTypeface" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <View
        android:id="@+id/viewHorizontalLine"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginTop="19dp"
        android:background="@color/grayDark" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/llScrollViewContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.eyepetizer.android.ui.common.view.TypefaceTextView
                android:id="@+id/tvFollow"
                style="@style/Eyepetizer.MineTextView"
                android:paddingHorizontal="13dp"
                android:text="@string/my_follow" />

            <com.eyepetizer.android.ui.common.view.TypefaceTextView
                android:id="@+id/tvWatchRecord"
                style="@style/Eyepetizer.MineTextView"
                android:text="@string/watch_record" />

            <com.eyepetizer.android.ui.common.view.TypefaceTextView
                android:id="@+id/tvNotificationToggle"
                style="@style/Eyepetizer.MineTextView"
                android:text="@string/notification_toggle" />

            <com.eyepetizer.android.ui.common.view.TypefaceTextView
                android:id="@+id/tvMyBadge"
                style="@style/Eyepetizer.MineTextView"
                android:text="@string/my_badge" />

            <com.eyepetizer.android.ui.common.view.TypefaceTextView
                android:id="@+id/tvFeedback"
                style="@style/Eyepetizer.MineTextView"
                android:text="@string/feedback" />

            <com.eyepetizer.android.ui.common.view.TypefaceTextView
                android:id="@+id/tvContribute"
                style="@style/Eyepetizer.MineTextView"
                android:text="@string/want_contribute" />

            <com.eyepetizer.android.ui.common.view.TypefaceTextView
                android:id="@+id/tvVersionNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:layout_marginBottom="15dp"
                android:background="?android:attr/selectableItemBackground"
                android:paddingHorizontal="5dp"
                android:textColor="@color/grayDark"
                android:textSize="11sp"
                app:typeface="fzlLTypeface"
                tools:text="Version 6.3.0" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>