<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.notification.interaction.InteractionFragment">

    <ImageView
        android:id="@+id/ivTips"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="77dp"
        android:src="@drawable/ic_login_tips_gray_100dp" />

    <com.eyepetizer.android.ui.common.view.TypefaceTextView
        android:id="@+id/tvTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/guide_login_tips_three"
        android:textColor="@color/colorTextPrimaryDark"
        android:textSize="15sp"
        app:typeface="fzdb1Typeface" />

    <com.eyepetizer.android.ui.common.view.TypefaceTextView
        android:id="@+id/tvLoginTips"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/guide_login_tips_two"
        android:textColor="@color/colorTextPrimaryDark"
        android:textSize="12sp"
        app:typeface="fzlLTypeface" />

    <com.eyepetizer.android.ui.common.view.TypefaceTextView
        android:id="@+id/tvLogin"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginTop="60dp"
        android:background="@color/blue"
        android:gravity="center"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:typeface="fzdb1Typeface" />
</LinearLayout>