<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_dialog_radius_white_6dp_bg"
    android:orientation="vertical">

    <com.eyepetizer.android.ui.common.view.TypefaceTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:text="@string/give_good_review"
        android:textColor="@color/colorTextPrimary"
        android:textSize="12sp"
        app:typeface="fzlLTypeface" />

    <com.eyepetizer.android.ui.common.view.TypefaceTextView
        android:id="@+id/tvEncourageMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:lineSpacingMultiplier="1.3"
        android:paddingHorizontal="10dp"
        android:text="@string/encourage_message"
        android:textColor="@color/colorTextSecondary"
        android:textSize="11sp"
        app:typeface="fzlLTypeface" />

    <View
        android:id="@+id/dividerHorizontal"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginHorizontal="7dp"
        android:background="#a0a0a0" />

    <LinearLayout
        android:id="@+id/llContainer"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <com.eyepetizer.android.ui.common.view.TypefaceTextView
            android:id="@+id/tvPositiveButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/not_encourage"
            android:textColor="#696969"
            android:textSize="12sp"
            app:typeface="fzlLTypeface" />

        <View
            android:id="@+id/dividerVertical"
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:layout_marginVertical="10dp"
            android:background="#a0a0a0" />

        <com.eyepetizer.android.ui.common.view.TypefaceTextView
            android:id="@+id/tvNegativeButton"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/encourage"
            android:textColor="@color/colorTextPrimary"
            android:textSize="12sp"
            app:typeface="fzlLTypeface" />

    </LinearLayout>

</LinearLayout>